vpc.tf
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"
    instance_tenancy = "default"
    enable_dns_support = "true"
    enable_dns_hostnames = "true"
    enable_classiclink = "false"
    tags = {
        Name = "arslan-vpc"
    }
}

# For Subnets
resource "aws_subnet" "arslan-public-1" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = "ap-south-1a"
    tags = {
        Name = "arslan-public-1"
    }
}


# For Internet Gateway
resource "aws_internet_gateway" "main-gw" {
    vpc_id = aws_vpc.main.id
    tags = {
        Name = "arslan-igw"
    }
}

# For Route Tables
resource "aws_route_table" "main-public" {
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main-gw.id
    }
    tags = {
        Name = "arslan-route-table"
    }
}

# For Route associations public
resource "aws_route_table_association" "main-public-1-a" {
    subnet_id = aws_subnet.arslan-public-1.id
    route_table_id = aws_route_table.main-public.id
}
